[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Monocraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ice_girl/sprite/idle.png" type="Texture" id=2]
[ext_resource path="res://src/utils/player/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/magma_boy/idle/idle.png" type="Texture" id=4]

[sub_resource type="Animation" id=4]
resource_name = "ig_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "mb_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 34.0

[sub_resource type="DynamicFont" id=2]
size = 9
font_data = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" groups=["debug_node", "network_node"]]
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/ig_idle = SubResource( 4 )
anims/mb_idle = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
shape = SubResource( 3 )

[node name="GroundRC1" type="RayCast2D" parent="."]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="GroundRC2" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="LeftRC" type="RayCast2D" parent="."]
position = Vector2( -7, -24 )
enabled = true
cast_to = Vector2( -2, 0 )

[node name="RightRC" type="RayCast2D" parent="."]
position = Vector2( 7, -24 )
enabled = true
cast_to = Vector2( 2, 0 )

[node name="UsernameLabel" type="Label" parent="."]
margin_left = -24.0
margin_top = -69.0
margin_right = 24.0
margin_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "username"
align = 1
valign = 1
